src/spacing.css
.mb-1,
.my-1 {
  margin-bottom: 0.25rem !important;
}

.mb-2,
.my-2 {
  margin-bottom: 0.5rem !important;
}

.mb-3,
.my-3 {
  margin-bottom: 1rem !important;
}

.mb-4,
.my-4 {
  margin-bottom: 1.5rem !important;
}

.mt-1,
.my-1 {
  margin-top: 0.25rem !important;
}

.mt-2,
.my-2 {
  margin-top: 0.5rem !important;
}

.mt-3,
.my-3 {
  margin-top: 1rem !important;
}

.mt-4,
.my-4 {
  margin-top: 1.5rem !important;
}

.px-1 {
  padding-left: 0.25rem !important;
}

.pt-1,
.py-1 {
  padding-top: 0.25rem !important;
}

.pt-2,
.py-2 {
  padding-top: 0.5rem !important;
}

.pt-3,
.py-3 {
  padding-top: 1rem !important;
}

.pt-4,
.py-4 {
  padding-top: 1.5rem !important;
}

